--- a/assignment/assignment_programming.ipynb
+++ b/assignment/assignment_programming.ipynb
@@ -110,10 +110,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "f42ab788-af0c-47a4-a103-46c9a37bfad3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample mean:  -1.0899806430403438\n",
+      "Sample sd:  3.2847981697718236\n",
+      "z-score:  [-1.05060967 -0.74576403 -0.38160532  0.24681908  0.52189922  0.70940228\n",
+      " -0.59306576  0.70489592  0.19667971]\n",
+      "Sample covariance:  -2.8396505928938773\n",
+      "Sample correlation coefficient:  -0.42205093921264875\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import math as math\n",
@@ -126,7 +139,14 @@
     "x = sample[:,0]\n",
     "y = sample[:,1]\n",
     "\n",
-    "#############################################################################\n"
+    "#############################################################################\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# 1. Sample mean of x\n",
+    "def sample_mean(x):\n",
+    "    N = len(x)\n",
+    "    return np.sum(x) / N\n",
+    "print(\"Sample mean: \", sample_mean(x))\n"
    ]
   },
   {
@@ -177,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
