--- a/assignment/assignment_programming.ipynb
+++ b/assignment/assignment_programming.ipynb
@@ -202,7 +202,13 @@
     "    mean = sample_mean(x)\n",
     "    return np.sqrt((np.sum((x - mean) ** 2)) / (N - 1))\n",
     "print(\"Sample sd: \", sample_sd(x))\n",
-    "\n"
+    "\n",
+    "# 3. z-score\n",
+    "def z_score(x):\n",
+    "    mean = sample_mean(x)\n",
+    "    s = sample_sd(x)\n",
+    "    return (x - mean) / s\n",
+    "print(\"z-score: \", z_score(x))\n"
    ]
   },
   {
