--- a/assignment/assignment_programming.ipynb
+++ b/assignment/assignment_programming.ipynb
@@ -208,7 +208,16 @@
     "    mean = sample_mean(x)\n",
     "    s = sample_sd(x)\n",
     "    return (x - mean) / s\n",
-    "print(\"z-score: \", z_score(x))\n"
+    "print(\"z-score: \", z_score(x))\n",
+    "\n",
+    "# 4. Sample covariance\n",
+    "def sample_covariance(x, y):\n",
+    "    mean_x = sample_mean(x)\n",
+    "    mean_y = sample_mean(y)\n",
+    "    N = len(x)\n",
+    "    return np.sum((x - mean_x) * (y - mean_y)) / (N - 1)\n",
+    "print(\"Sample covariance: \", sample_covariance(x, y))\n",
+    "\n"
    ]
   },
   {
