sample correlation coefficient

--- a/assignment/assignment_programming.ipynb
+++ b/assignment/assignment_programming.ipynb
@@ -217,6 +217,13 @@
     "    N = len(x)\n",
     "    return np.sum((x - mean_x) * (y - mean_y)) / (N - 1)\n",
     "print(\"Sample covariance: \", sample_covariance(x, y))\n",
+    "\n",
+    "# 5. Sample correlation coefficient\n",
+    "def sample_correlation_coefficient(x, y):\n",
+    "    s_x = sample_sd(x)\n",
+    "    s_y = sample_sd(y)\n",
+    "    return sample_covariance(x, y) / (s_x * s_y)\n",
+    "print(\"Sample correlation coefficient: \", sample_correlation_coefficient(x, y))\n",
     "\n"
    ]
   },
