--- a/assignment/assignment_programming.ipynb
+++ b/assignment/assignment_programming.ipynb
@@ -25,6 +25,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c677aab6",
+   "metadata": {},
+   "source": [
+    "1. 2023 Median Pay: $108020 per year, Number of Jobs in 2023: 202900, Job Outlook in next 10 years: 36%, Employment change: 73100\n",
+    "2. See spreadsheet\n",
+    "3. Something that was surprising to me was the job outlook for physical therapists was relatively high and very high compared to something I would think is comparable like dentists. I also found data scientists' job outlook to be surprising as it was significantly higher, 2-7 times as the other occupations I looked at. \n",
+    "4. Physical Therapist, Human Resources Specialist, Dentists, Software Developer, Data Scientist, Lawyers, Computer Hardware Engineers, Physicists and Astronomers, Chefs and Head Cooks, Athletes and Sports Competitors. These rankings are based on salary, job security, and work-life balance. Jobs like Physical Therapist and Dentists pay well and are secure. Jobs towards the center like Lawyer and Physicist have more intense work and potentially higher stress environments. And a job like an Athlete may or may not have a high pay but can be very demanding while having very low job security. \n",
+    "\n",
+    "5. See spreadsheet"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7e9d65ad-3740-43d3-a944-b3653fbeb80c",
    "metadata": {},
    "source": [
